overflow fix

--- a/src/client/scss/components/chart.scss
+++ b/src/client/scss/components/chart.scss
@@ -8,7 +8,6 @@
     justify-content: end;
     width: 100%;
     height: 50%;
-    min-height: 10%;
     background-color: rgba(0, 0, 0, 0.5);
     border-radius: 15px;
     overflow: hidden;
