--- a/src/client/scss/screens/home.scss
+++ b/src/client/scss/screens/home.scss
@@ -1,6 +1,10 @@
+.main {
+  width: 100%;
+}
+
 .chart-form-box {
+  width: 100%;
   height: 300px;
-  margin-top: 5px;
   display: grid;
   grid-template-columns: 1fr;
   grid-template-rows: 1fr 4fr;
@@ -34,11 +38,13 @@
         align-items: center;
       }
       div {
+        width: 100%;
         height: 100%;
         display: grid;
         grid-template-columns: repeat(2, 1fr) 30px;
         gap: 5px;
         input {
+          width: 100%;
           padding: 0 10px;
           font-size: 16px;
           border: 1px solid black;
