--- a/src/client/scss/styles.scss
+++ b/src/client/scss/styles.scss
@@ -15,12 +15,14 @@
 * {
   font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
     Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+
   box-sizing: border-box;
 }
 
 body {
   margin-top: 40px;
   padding: $sidePadding;
+  width: 100vw;
 }
 
 @media (max-width: 1100px) {
